--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smart Exam Paper Generator</title>
-    <meta name="description" content="Create professional exam papers with ease - Smart Exam Paper Generator for teachers" />
+    <meta name="description" content="Create exam papers with ease" />
     <meta name="author" content="Smart Exam Paper Generator" />
 
     <meta property="og:title" content="Smart Exam Paper Generator" />
-    <meta property="og:description" content="Create professional exam papers with ease - Smart Exam Paper Generator for teachers" />
+    <meta property="og:description" content="Create exam papers with ease" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
